* 0.11
    - Added berusky2-data install script
    - New icon
    - Fixed more crashes and a hang
    - Enable demo recording
    - Don't show a duplicate cursor after playing a level
    - Allow held-down keys to be processed immediately after an animation finishes

* 0.10
    - Incompatible save game format!
    - Builds/run with fortified sources
    - Fixed crashes at level end (am_Do_Exit_Efects)

* 0.9
    - game window can be resized on the fly
    - fullscreen/windowed mode switch in menu
    - fixed some texts in menu
    - set game fps (60 fps by default)
    - level load/save support
    - fullscreen runs in native desktop resolution
    - fixed menu in fullscreen and cursor rendering
    - fixed more crashes

* 0.8
    - fixed crash at level end (rhbz#858887)

* 0.7
    - sound and music

* 0.5
    - fixed 64-bit builds

* 0.4 
    - local installation fixes
    - build script updated (better directory configuration, build flags from pkg-config)

* 0.3 
    - added game menu, new levels/tutorial, first "playable" release

* 0.2 
    - switched to english version, fixed help/settings/hints rendering

* 0.1 
    - first linux release